--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <meta name="author" content="KONG" />
+   <link href="http://feeds.feedburner.com/athanhcong" rel="alternate" title="KONG" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -12,52 +12,58 @@
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
-   <!-- Typekit -->
+   <!-- Typekit 
    <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+   -->
 </head>
 <body>
 
-<!-- ClickTale Top part -->
+<!-- ClickTale Top part 
 <script type="text/javascript">
 var WRInitTime=(new Date()).getTime();
 </script>
 <!-- ClickTale end of Top part -->
 
 <div class="site">
+
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
-    <a class="extra" href="/">home</a>
+    <a href="/"><img class="logo" src="/images/kong.png"/></a>
+    <div>
+      <a href="/">KONG @athanhcong</a> 
+      <!--<a class="extra" href="/">home</a>-->
+      <span>Startup, Life, Coding and Learning</span>
+    </div>
   </div>
   
+
+
   {{ content }}
   
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner<br />
-        Cofounder of <a href="http://github.com/">GitHub</a><br />
-        tom@mojombo.com
+        KONG<br />
+        CTO of <a href="http://stickeryapp.com/">Stickery</a><br />
+        athanhcong@gmail.com
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
-        <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
+        <a href="http://github.com/athanhcong/">github.com/athanhcong</a><br />
+        <a href="http://twitter.com/athanhcong/">twitter.com/athanhcong</a><br />
+        <a href="http://instagram.com/athanhcong">instagram.com/athanhcong</a>
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
+      <a href="http://feeds.feedburner.com/athanhcong">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
   </div>
 </div>
 
-<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
-
-<!-- ClickTale Bottom part -->
+<!-- ClickTale Bottom part 
 <div id="ClickTaleDiv" style="display: none;"></div>
 <script type="text/javascript">
 if(document.location.protocol!='https:')
@@ -68,7 +74,7 @@ if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
 </script>
 <!-- ClickTale end of Bottom part -->
 
-<!-- Google Analytics -->
+<!-- Google Analytics 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
