--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<h1 class='entry-title'>{{ page.title}}</h1>
+<p class='meta'>{{ page.date | date_to_string }}</p>
 <div id="post">
 {{ content }}
 </div>
