add guessing contact

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,8 @@ var WRInitTime=(new Date()).getTime();
       <p>
         <a href="http://github.com/athanhcong/">github.com/athanhcong</a><br />
         <a href="http://twitter.com/athanhcong/">twitter.com/athanhcong</a><br />
-        <a href="http://instagram.com/athanhcong">instagram.com/athanhcong</a>
+        <a href="http://instagram.com/athanhcong">instagram.com/athanhcong</a><br />
+        <small style="color:#AAA;">Other contact? You can guess the *pattern* :)</small>
       </p>
     </div>
     <div class="rss">
