--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
-   <meta name="author" content="KONG" />
-   <link href="http://feeds.feedburner.com/athanhcong" rel="alternate" title="KONG" type="application/atom+xml" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>{{ page.title }}</title>
+  <meta name="author" content="KONG" />
+  <link href="http://feeds.feedburner.com/athanhcong" rel="alternate" title="KONG" type="application/atom+xml" />
 
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+  <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+  <!-- Homepage CSS -->
+  <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
-   <!-- Typekit 
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-   -->
+  <!-- Typekit 
+  <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  -->
 </head>
 <body>
 
@@ -37,13 +37,12 @@ var WRInitTime=(new Date()).getTime();
   </div>
   
 
-
   {{ content }}
   
   <div class="footer">
     <div class="contact">
       <p>
-        KONG<br />
+        KONG <br />
       </p>
     </div>
     <div class="contact">
@@ -73,14 +72,17 @@ if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
 </script>
 <!-- ClickTale end of Bottom part -->
 
-<!-- Google Analytics 
+<!-- Google Analytics -->
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-6016902-1");
-pageTracker._trackPageview();
+   var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-28283818-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 </script>
 <!-- Google Analytics end -->
 
