--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,19 @@
 ---
 layout: default
 ---
+
 <h1 class='entry-title'>{{ page.title}}</h1>
 <p class='meta'>{{ page.date | date_to_string }}</p>
 <div id="post">
-{{ content }}
+  {{ content }}
 </div>
 <br/>
 <br/>
-<!-- <div id="related">
+<!-- Sharing -->
+<div>
+  <a href="http://bufferapp.com/add" class="buffer-add-button" data-count="none" >Buffer</a><script type="text/javascript" src="http://static.bufferapp.com/js/button.js"></script>
+</div>
+ <!-- <div id="related">
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
