--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   -->
+  <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">  
+  <script type="text/javascript" src="http://airve.github.io/js/response/response.min.js"></script>
 </head>
 <body>
 
