add discuss in twitter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">  
   <!-- <script type="text/javascript" src="http://airve.github.io/js/response/response.min.js"></script> -->
 </head>
+
+<style>
+ .footer p {
+  font-size:13px;
+ }
+
+</style>
 <body>
 
 <!-- ClickTale Top part 
@@ -32,7 +39,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="title">
     <a href="/"><img class="logo" src="/images/kong.png"/></a>
     <div>
-      <a href="/">KONG @athanhcong</a> 
+      <a href="/">KONG</a> <a href="http://twitter.com/athanhcong/">@athanhcong</a>
       <!--<a class="extra" href="/">home</a>-->
       <span>Startup, Life, Coding and Learning</span>
     </div>
@@ -44,15 +51,17 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        KONG <br />
+        @<a target="_blank" href="http://twitter.com/athanhcong/">athanhcong</a>
+
       </p>
+
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/athanhcong/">github.com/athanhcong</a><br />
-        <a href="http://twitter.com/athanhcong/">twitter.com/athanhcong</a><br />
-        <a href="http://instagram.com/athanhcong">instagram.com/athanhcong</a><br />
-        <small style="color:#AAA;">Other contact? You can guess the *pattern* :)</small>
+        <a target="_blank" href="http://blogwith.co/">BlogWith - Connect Evernote to your blog</a><br />
+        <a target="_blank" href="http://30d.me/challenge/ios/">30 Day iOS Challenge</a><br />
+        <a target="_blank" href="https://itunes.apple.com/app/id654745890">Promise - Building good habits</a><br />        
+
       </p>
     </div>
     <div class="rss">
