--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,9 @@ layout: default
 <br/>
 <br/>
 <!-- Sharing -->
-<div>
-  <a href="http://bufferapp.com/add" class="buffer-add-button" data-count="none" >Buffer</a><script type="text/javascript" src="http://static.bufferapp.com/js/button.js"></script>
+<div style="font-size:80%">
+	---<br/>
+	Discuss in <a target="_blank" href="http://www.twitter.com/home?status=@athanhcong">Twitter</a>
 </div>
  <!-- <div id="related">
   <h2>Related Posts</h2>
